reimplementação Java de cnpj_util

--- a/config/application.properties
+++ b/config/application.properties
@@ -13,3 +13,5 @@ lucene.index.location=C:/Users/Monique/Documents/TCU/SecexSaude/IndiceCNPJ/indic
 #Port to be used for the rest api
 #server.port=8090
 server.port=8090
+
+sqlite.arquivo=C:/Users/Monique/Documents/TCU/SecexSaude/CoviDATA/dados/CNPJ-sqlite/CNPJ_full.db
