--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
 			<version>3.32.3.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<properties>
